--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.20",
     "@gluestack-ui/themed": "^1.1.73",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.8.1",
+    "@react-navigation/material-top-tabs": "^7.4.3",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
     "babel-preset-expo": "^54.0.6",
     "expo": "54.0.22",
     "expo-asset": "12.0.9",
+    "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.9",
     "expo-font": "14.0.9",
     "expo-haptics": "~15.0.7",
+    "expo-image-manipulator": "~14.0.7",
+    "expo-linear-gradient": "~15.0.7",
     "expo-media-library": "~18.2.0",
     "expo-speech-recognition": "^2.1.5",
     "expo-splash-screen": "31.0.10",
@@ -32,9 +37,13 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.29.1",
+    "react-native-pager-view": "^6.9.1",
+    "react-native-palette-full": "^1.2.0",
+    "react-native-reanimated": "^4.1.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1"
+    "react-native-svg": "^15.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
